--- a/app/src/main/res/layout/activity_product_item.xml
+++ b/app/src/main/res/layout/activity_product_item.xml
@@ -50,10 +50,13 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <!-- ADD THE ID HERE -->
     <Button
+        android:id="@+id/addToCartButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ADD TO CART"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:background="@drawable/button_outline_ripple"
         android:layout_marginTop="8dp"
