--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,11 +63,6 @@
         android:background="@drawable/button_outline_ripple"
         android:padding="12dp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:visibility="gone" />
+    <!-- ProgressBar removed since it's not mandatory -->
 
 </LinearLayout>
