--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
 
     <color name="bottom_nav_selected">#000000</color>
     <color name="bottom_nav_unselected">#666666</color>
+
+    <color name="gray">#757575</color>
 </resources>
